# AutoAumento

./: .gitignore  README.md  benchmark_config.json  benchmark_entries.json  methods.json  pipeline.json  pipeline_config.json  pyproject.toml  reference.json  requirements.txt  resultados  rules.json
app/: main.py
app/application/use_cases/: benchmark_use_case.py  generate_text_use_case.py  parse_generated_output_use_case.py  parse_use_case.py  pipeline_use_case.py  verify_use_case.py
app/domain/model/entities/: benchmark.py  generation.py  parsing.py  pipeline.py  verification.py
app/domain/ports/: llm_port.py
app/domain/services/: benchmark_service.py  generate_service.py  parse_service.py  pipeline_service.py  placeholder_service.py  verifier_service.py
app/infraestructure/: file_repository.py
app/infrastructure/: file_repository.py
autoaumento/: cli.py  main.py
autoaumento/benchmark/: benchmark_evaluator.py  result_handler.py
autoaumento/models/: generator.py
autoaumento/utils/: visualizer.py
autoaumento/verifier/: verifier.py
config/: config.py  prompts.json
config/benchmark/: benchmark_config.json
config/pipeline/: pipeline_reference_data.json
data/: data.json  test-back-translation.json  test-correction.json  test-information-loss.json  test-semantic-coherence.json  test.json
main/: cli.py  main.py
main/benchmark/: benchmark_evaluator.py  result_handler.py
main/models/: device_manager.py  embedder.py  generator.py
main/utils/: data_manager.py  visualizer.py
main/verifier/: verifier.py
