[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoAumento"
version = "1.0.0"
description = "Proyecto para generar y verificar frases sintécticas con IA."
authors = [
    {name = "Joan Casanova", email = "juancasanovaferrer@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "matplotlib>=3.5.0",
    "argparse",
    "sacremoses>=0.1.1",
    "huggingface-hub>=0.26.2",
    "tokenizers>=0.20.3",
    "inquirer>=3.4.0"
]

[project.urls]
Homepage = "https://github.com/joancasanova/AutoAumento" 

[project.scripts]
autoaumento-start = "autoaumento.cli:display_menu"

[tool.setuptools.packages.find]
where = ["."]
